Update reference section to include FastText corpora

--- a/SentimentAnalysis/SentimentAnalysisExploration.ipynb
+++ b/SentimentAnalysis/SentimentAnalysisExploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1b758574",
+   "id": "88cc0712",
    "metadata": {},
    "source": [
     "# Unveiling Sentiments: Exploring Customer Reviews using Logistic Regression, Random Forest, and CNN-LSTM"
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32866b88",
+   "id": "cc7e1d00",
    "metadata": {},
    "source": [
     "Using the logistic regression model trained with cross-validation, the performance of the model on the test data was evaluated. The accuracy score on the test data was calculated to assess the overall correctness of the model's predictions. Additionally, precision, recall, and F1-score were determined to evaluate the model's classification performance for sentiment analysis.\n",
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07794ca8",
+   "id": "15398e6b",
    "metadata": {},
    "source": [
     "The Random Forest model was trained and evaluated using the same dataset as the logistic regression. It achieved the following performance metrics on the test data:\n",
@@ -2034,12 +2034,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba8b7dc3",
+   "id": "9f123b79",
    "metadata": {},
    "source": [
     "## Reference\n",
     "\n",
     "Abadi, M., Agarwal, A., Barham, P., Brevdo, E., Chen, Z., Citro, C., Corrado, G. S., Davis, A., Dean, J., Devin, M., Ghemawat, S., Goodfellow, I., Harp, A., Irving, G., Isard, M., Jozefowicz, R., Jia, Y., Kaiser, L., Kudlur, M., … Zheng, X. (2015). TensorFlow: Large-scale machine learning on heterogeneous systems. TensorFlow. Retrieved from https://www.tensorflow.org/ \n",
+    "\n",
+    "Bojanowski, P., Grave, E., Joulin, A., & Mikolov, T. (2017). Enriching Word Vectors with Subword Information. Transactions of the Association for Computational Linguistics, 5, 135-146. Retrieved from https://www.mitpressjournals.org/doi/abs/10.1162/tacl_a_00051\n",
     "\n",
     "Chakure, A. (2020, November 06). Random Forest and Its Implementation. Retrieved from https://medium.com/swlh/random-forest-and-its-implementation-71824ced454f\n",
     "\n",
