Save final outputs and updated report sections

--- a/SentimentAnalysis/SentimentAnalysisExploration.ipynb
+++ b/SentimentAnalysis/SentimentAnalysisExploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "88cc0712",
+   "id": "193b9a5d",
    "metadata": {},
    "source": [
     "# Unveiling Sentiments: Exploring Customer Reviews using Logistic Regression, Random Forest, and CNN-LSTM"
@@ -95,9 +95,9 @@
    "outputs": [],
    "source": [
     "# Define file addresses\n",
-    "address1 = \"Data/amazon_cells_labelled.txt\"\n",
-    "address2 = \"Data/imdb_labelled.txt\"\n",
-    "address3 = \"Data/yelp_labelled.txt\"\n",
+    "address1 = \"Review-Data/amazon_cells_labelled.txt\"\n",
+    "address2 = \"Review-Data/imdb_labelled.txt\"\n",
+    "address3 = \"Review-Data/yelp_labelled.txt\"\n",
     "\n",
     "# Read data from files into dataframes\n",
     "df1 = pd.read_csv(address1, delimiter='\\t', header=None)\n",
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc7e1d00",
+   "id": "66d08315",
    "metadata": {},
    "source": [
     "Using the logistic regression model trained with cross-validation, the performance of the model on the test data was evaluated. The accuracy score on the test data was calculated to assess the overall correctness of the model's predictions. Additionally, precision, recall, and F1-score were determined to evaluate the model's classification performance for sentiment analysis.\n",
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "id": "26c13467",
    "metadata": {
     "scrolled": true
@@ -1132,14 +1132,16 @@
       "Best hyperparameters:\n",
       " {'max_depth': 9, 'max_features': 0.5, 'min_samples_leaf': 1, 'n_estimators': 600}\n",
       "\n",
-      "Test set RMSE: 0.4109\n",
-      "Test set MSE: 0.1688\n",
-      "Test set accuracy: 0.7491\n",
-      "Test set precision: 0.7396\n",
-      "Test set recall: 0.7745\n",
-      "Test set F1-score: 0.7567\n",
-      "Test set log loss: 9.0439\n",
-      "Test set AUC-ROC: 0.7489\n"
+      "Evaluation metrics for random forest regression on test data:\n",
+      "\n",
+      "RMSE: 0.4109\n",
+      "MSE: 0.1688\n",
+      "Accuracy: 0.7491\n",
+      "Precision: 0.7396\n",
+      "Recall: 0.7745\n",
+      "F1-score: 0.7567\n",
+      "Log loss: 7.3276\n",
+      "AUC-ROC: 0.7966\n"
      ]
     }
    ],
@@ -1161,7 +1163,7 @@
     "                       cv=5,\n",
     "                       scoring='neg_mean_squared_error',\n",
     "                       verbose=1,\n",
-    "                       n_jobs=-1)\n",
+    "                       n_jobs=6)\n",
     "# Fit 'grid_rf' to training data\n",
     "grid_rf.fit(X_train, y_train)\n",
     "\n",
@@ -1208,7 +1210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15398e6b",
+   "id": "1ce6d5cf",
    "metadata": {},
    "source": [
     "The Random Forest model was trained and evaluated using the same dataset as the logistic regression. It achieved the following performance metrics on the test data:\n",
@@ -1253,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "id": "e4aecbbf",
    "metadata": {},
    "outputs": [
@@ -1294,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "id": "ece0ad35",
    "metadata": {},
    "outputs": [
@@ -1796,7 +1798,7 @@
    "metadata": {},
    "source": [
     "### Evaluation of Model Performance\n",
-    "To assess the performance of the model on the testing dataset, the loss and accuracy metrics were calculated. The loss value obtained was 0.4297, while the accuracy achieved was 81.72%."
+    "To assess the performance of the model on the testing dataset, the loss and accuracy metrics were calculated. The loss value obtained was 0.4320, while the accuracy achieved was 81.32%."
    ]
   },
   {
@@ -1827,9 +1829,9 @@
    "id": "9928474e",
    "metadata": {},
    "source": [
-    "These results provide insights into how well the model generalized to unseen data. The loss metric represents the discrepancy between the predicted and true labels, with a lower value indicating better performance. In this case, the obtained loss value of 0.4297 suggests that the model achieved a relatively low level of error in its predictions.\n",
+    "These results provide insights into how well the model generalized to unseen data. The loss metric represents the discrepancy between the predicted and true labels, with a lower value indicating better performance. In this case, the obtained loss value of 0.4320 suggests that the model achieved a relatively low level of error in its predictions.\n",
     "\n",
-    "The accuracy metric, on the other hand, reflects the proportion of correctly classified instances out of the total number of instances in the testing dataset. With an accuracy of 81.72%, the model demonstrated a reasonably high level of correctness in its predictions.\n",
+    "The accuracy metric, on the other hand, reflects the proportion of correctly classified instances out of the total number of instances in the testing dataset. With an accuracy of 81.32%, the model demonstrated a reasonably high level of correctness in its predictions.\n",
     "\n",
     "These results highlight the effectiveness of the trained model in accurately classifying sentiment in unseen data. The combination of low loss and high accuracy indicates that the model has successfully captured meaningful patterns and relationships in the data, enabling it to make reliable predictions.\n",
     "\n",
@@ -1912,12 +1914,12 @@
     "\n",
     "| Sentiment Label | F1-Score | Number of Samples |\n",
     "|-----------------|----------|------------------|\n",
-    "| Negative (0)    | 80%      | 271              |\n",
+    "| Negative (0)    | 77%      | 271              |\n",
     "| Positive (1)    | 81%      | 275              |\n",
     "\n",
-    "The CNN-LSTM model achieved an F1-score of 80% for the negative sentiment label (label 0), indicating a reasonable balance between precision and recall. The model correctly identified negative sentiment in 80% of the samples belonging to this category. For the positive sentiment label (label 1), the model achieved an F1-score of 81%, demonstrating a similar balance between precision and recall in identifying positive sentiment.\n",
+    "The CNN-LSTM model achieved an F1-score of 77% for the negative sentiment label (label 0), indicating a reasonable balance between precision and recall. The model correctly identified negative sentiment in 77% of the samples belonging to this category. For the positive sentiment label (label 1), the model achieved an F1-score of 81%, demonstrating a similar balance between precision and recall in identifying positive sentiment.\n",
     "\n",
-    "The classification report also provides precision, recall, and F1-score for each sentiment label. It reveals that the model achieved a precision of 83% and recall of 77% for the negative sentiment label, while for the positive sentiment label, the precision is 79% and recall is 84%. These metrics highlight the model's ability to make accurate predictions for both negative and positive sentiment.\n",
+    "The classification report also provides precision, recall, and F1-score for each sentiment label. It reveals that the model achieved a precision of 85% and recall of 71% for the negative sentiment label, while for the positive sentiment label, the precision is 75% and recall is 87%. These metrics highlight the model's ability to make accurate predictions for both negative and positive sentiment.\n",
     "\n",
     "Overall, the CNN-LSTM model demonstrates a reasonable performance in sentiment analysis, achieving a balanced F1-score for both negative and positive sentiment labels. These results contribute to the comprehensive evaluation of the model's performance and provide valuable insights into its effectiveness in accurately classifying sentiment."
    ]
@@ -2034,7 +2036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f123b79",
+   "id": "198a6057",
    "metadata": {},
    "source": [
     "## Reference\n",
