Update heading for text preprocessing section

--- a/SentimentAnalysis/SentimentAnalysisExploration.ipynb
+++ b/SentimentAnalysis/SentimentAnalysisExploration.ipynb
@@ -256,7 +256,7 @@
    "metadata": {},
    "source": [
     "### Clean and Tokenize Reviews\n",
-    "Text preprocessing is a crucial step in natural language processing (NLP). In this project, a custom function was created using well-known tools from the NLTK library to perform the necessary text processing.\n",
+    "In this project, a custom function was created using well-known tools from the NLTK library to perform the necessary text processing.\n",
     "\n",
     "The function applies a series of transformations to the reviews:\n",
     "\n",
@@ -2013,7 +2013,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3c43678b",
    "metadata": {},
